--- a/gb/25/2/2/n14428294.md
+++ b/gb/25/2/2/n14428294.md
@@ -3,53 +3,50 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>冬天还有多久？美国土拨鼠做出预测</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2025/02/id14428309-AFP__20250202__2196658902__v1__Preview__PunxsutawneyPhilSharesWinterSpringPrediction-600x400.jpg" />
-<h6>2025年2月2日，宾州举行第139届年度土拨鼠日，土拨鼠管理员AJ Dereume抱着土拨鼠菲尔。(Jeff Swensen/GETTY IMAGES NORTH AMERICA/Getty Images via AFP)
-</h6>
+<h6>2025年2月2日，宾州举行第139届年度土拨鼠日，土拨鼠管理员AJ Dereume抱着土拨鼠菲尔。(Jeff Swensen/Getty Images North America/Getty Images via AFP)</h6>
 <hr>
 	<p>【大纪元2025年02月03日讯】（大纪元记者张婷综合报导）2月2日是北美传统的土拨鼠日。美国著名的土拨鼠天气观察员菲尔（Punxsutawney Phil）一大早就被从温暖的洞穴中拉出来。它看到了自己的影子，这预示着冬天还有六个星期才能过去。</p>
 <p>每年的土拨鼠日（Groundhog Day），宾州庞克瑟托尼土拨鼠俱乐部（Punxsutawney Groundhog Club）的成员都会前往菲尔的官方住所Gobbler’s Knob，等着它做出重大天气预测。</p>
 <p>周日，日出后不久，菲尔便在人们的欢呼声中被从洞穴中拉了出来，并做出了它今年的预测。它选择了一个含有预测结果的卷轴，俱乐部的一位成员替菲尔宣读了卷轴的内容。</p>
 <p>“今天是土拨鼠日，也许生活在循环，但我想念我的洞穴……所以我要回去了，我看到了自己的影子，因此准备好再有六个星期的冬天吧。”菲尔在预测中说。</p>
+<figure id="attachment_14428321" aria-describedby="caption-attachment-14428321" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/02/id14428321-AFP__20250202__2196664597__v1__Preview__PunxsutawneyPhilSharesWinterSpringPrediction-e1738520423566.jpg" rel="nofollow"><img decoding="async" class="size-full wp-image-14428321" src="https://i.epochtimes.com/assets/uploads/2025/02/id14428321-AFP__20250202__2196664597__v1__Preview__PunxsutawneyPhilSharesWinterSpringPrediction-e1738520423566.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14428321" class="wp-caption-text">2025年2月2日，在宾州举行的第139届年度土拨鼠日活动上，超过4万人在等待土拨鼠菲尔的预测。(Jeff Swensen/Getty Images North America/Getty Images via AFP)</figcaption></figure>
 <p>Inner Circle主席汤姆?邓克尔（Tom Dunkel）表示，今年是参加土拨鼠日活动人数最多的年份之一。</p>
 <p>土拨鼠天气预报是宾州西部的一个倍受欢迎的年度仪式。传说中，如果菲尔看到了自己的影子，表示冬季还会持续六周。反之，如果它没看到自己的影子，那么今年将是早春。</p>
 <p>事实上，无论周日的预测结果如何，美国的冬天都会在美东时间3月20日清晨5:01的春分结束。</p>
 <p>根据菲尔的网站，菲尔及其在宾州庞克瑟托尼（Punxsutawney）镇的Gobbler’s Knob的朋友们，自1887年以来一直在预测冬季结束的时间。</p>
 <p>菲尔对天气的预测记录并不完美。美国国家海洋暨大气总署表示，2014年至2023年间，菲尔的预测准确率有30%。他正确地预测2014年冬季会更长，2016年和2020年春季会提前。</p>
+<figure id="attachment_14428323" aria-describedby="caption-attachment-14428323" style="width: 600px" class="wp-caption alignnone"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/02/id14428323-AFP__20250202__2196664456__v1__Preview__PunxsutawneyPhilSharesWinterSpringPrediction-e1738520640807.jpg" rel="nofollow"><img decoding="async" class="size-full wp-image-14428323" src="https://i.epochtimes.com/assets/uploads/2025/02/id14428323-AFP__20250202__2196664456__v1__Preview__PunxsutawneyPhilSharesWinterSpringPrediction-e1738520640807.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14428323" class="wp-caption-text">2025年2月2日，在宾州举行的第139届土拨鼠日活动上，土拨鼠菲尔预测今年冬天还会持续6周。(Jeff Swensen/Getty Images North America/Getty Images via AFP)</figcaption></figure>
 <p>在去年的预测中，菲尔没有看到自己的影子，这预示着早春即将到来。它的这一预测最终成为现实。2025年的预测是否会再次成功，倍受大家关注。</p>
 <p>自1887年以来，菲尔已经看到自己的影子107次。根据美国<span class="BxUVEf ILfuVd" lang="zh"><span class="hgKElc"><b>国家海洋和大气管理局</b></span></span>（NOAA）的数据，它曾20次预测早春，有10年没有记录。不过，NOAA也承认，预测全美春天的到来很难，因为美国是一个具有不同地区气候的国家。而且，它毕竟是一只土拨鼠，而不是气象学家。</p>
 <p>责任编辑：高静#</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/29/n14425118.md#1">川普提名的商务部长：加国若采取行动可不加关税</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426070.md#1">川普：仍在考虑是否对加墨两国石油征关税</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/1/n14426786.md#1">川普：将对芯片、药物和石油钢铝加征关税</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/1/n14427601.md#1">川普正式下令对加墨和中国加征关税</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278538.md#1">英夫妇耗时42年 将后院建成举世闻名的绿洲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/25/n14377959.md#1">麻州东南部发现狂犬病浣熊尸体</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/1/n14426888.md#1">史坦顿岛周末活动：赏鸟导览与土拨鼠日庆典</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/1/n14427472.md#1">Costco退货政策有多宽松 5个独特故事告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651258.md#1">大华府急难救助协会举办防诈讲座　提升侨胞识诈能力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14646219.md#1">2026年侨务委员会海外青年语文研习班开放报名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/16/n14637130.md#1">2025大华府地区华语文推广重点聚落研讨会 隆重登场 圆满举行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/16/n14637123.md#1">华府民俗文化种子教师研习3D果冻艺术创作</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/25/n10427499.md#1" target="_blank">严家伟：文革中的监狱往事</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/2/11/n4637812.md#1" target="_blank">修炼法轮功 母亲摆脱严重糖尿病重获新生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/12/n11108237.md#1" target="_blank">张林：疯狂中共两次差点让中国人被灭绝</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/11/5/n11633708.md#1" target="_blank">华东师范大学法轮功学员的20年</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/3/n14383823.md#1">《我的爱，我的新娘》：笑中带泪的婚姻生活</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386541.md#1">格鲁吉亚发现神秘石板 或蕴含失落语言</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387166.md#1">美国护士称见到2米高的死神逼近临终病人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/13/n13642953.md#1">叹武训</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14386112.md#1">【未解之谜】用DNA谱曲？遗传学中隐藏生命密码</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/1/n14362213.md#1">【环球直击】中共设七个空域保留区 台监控备战</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387662.md#1">【东岳看台】美国为什么一定要禁止TikTok？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/1/n14362212.md#1">【中国禁闻】川普透露最近与习近平通话</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/8/n14386798.md#1">援乌韩国士兵劝援俄朝鲜“兄弟”投降</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386560.md#1">56岁伊能静大方认老 自拍戴老花镜补妆获赞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386568.md#1">台网红发纪录片揭中共统战 逾百万人观看</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386564.md#1">揭中共统战黑幕 台湾歌手陈柏源发不自杀声明</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387474.md#1">春风称周杰伦是儿时偶像 网友查他真实年龄吓到</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387165.md#1">真人《白雪公主》预告片留言热烈 倒赞数惊人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386577.md#1">迈克尔·杰克逊爱女宣布订婚 男方身份曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387333.md#1">塑胶微粒无所不在 3成来自这个被忽略的来源</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/8/n14386747.md#1">【旅行趣】风车下的惊喜：爱上台湾王功的理由</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14386043.md#1">咖啡渣别急着丢 吸湿除臭超有效！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14386019.md#1">无论是否做运动 久坐都会增加患心脏病的风险</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/5/n14385098.md#1">一分钟护眼操精华版 改善干眼症白内障</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643889.md#1">婚姻幸福之道：阴阳平衡 琴瑟和鸣</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650550.md#1">【未解之谜】NASA也无法解释 太阳系神秘入侵者</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652776.md#1">【军事情报局】泰柬战争升级 F-16低空轰炸</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652899.md#1">【直播】NASA为探索月球、火星所做的准备</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652954.md#1">【百年真相】半夜鸡不叫：周扒皮冤案揭秘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651393.md#1">普渡大学为何指示院系拒收中国留学生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651372.md#1">【直播】NASA太空人告别太空站并关闭舱门</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651371.md#1">堕胎变催育 中共黑手再次伸向中国女性</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652089.md#1">巧合还是刻意？中共官微帖文惊现“于朦胧”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651415.md#1">刘诗诗得奖遭临时撤换 主办方“爱奇艺”挨轰</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652213.md#1">张柏芝遭索赔逾千万 法庭上情绪失控崩溃痛哭</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652972.md#1">消失一年被传死讯 陆网红冯提莫自曝停工内幕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652371.md#1">同一双袜子可以穿两次以上再洗吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/2/2/n14428294.htm">冬天还有多久？美国土拨鼠做出预测</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/2/2/n14428294.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
